fixed container overflow

--- a/securedrop/sass/_base.sass
+++ b/securedrop/sass/_base.sass
@@ -244,7 +244,7 @@
     .message
       display: inline-block
       vertical-align: top
-      width: 406px
+      width: 401px
       background: white
       overflow: hidden
 
